--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@
 
 body {
   font-family: Roboto, sans-serif;
-  font-weight: 400;
   color: var(--primary-text-color);
 }
 .link {
@@ -96,6 +95,7 @@ body {
   text-transform: uppercase;
 }
 .button {
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -107,11 +107,15 @@ body {
 .button:hover,
 .button:focus {
   background-color: #188ce8;
+  /* opacity: 0.9; */
   cursor: pointer;
 }
-.features-hidden-title,
-.portfolio-hidden-title {
+/* .visually-hidden {
   display: none;
+} */
+.visually-hidden {
+  position: fixed;
+  transform: scale(0);
 }
 .features-title {
   font-weight: 700;
@@ -163,6 +167,7 @@ body {
 }
 /* portfolio */
 .btn {
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
@@ -174,6 +179,7 @@ body {
 .btn:hover,
 .btn:focus,
 .btn:active {
+  color: var(--primary-title-color);
   background-color: var(--accent-color);
   cursor: pointer;
 }
